--- a/Pagina CITLALLI (Daniel)/resources/styles.css
+++ b/Pagina CITLALLI (Daniel)/resources/styles.css
@@ -2,27 +2,82 @@ body {
     background-color: #F6F1F1;
     color: #146C94;
     font-family: 'Georgia', serif;
-}
-.navbar {
-    background-color: #19A7CE;
-}
-.navbar a {
-    color: white !important;
-    font-weight: bold;
-}
-.btn-primary {
-    background-color: #146C94;
-    border: none;
-}
-.btn-primary:hover {
-    background-color: #19A7CE;
-}
-footer {
-    background-color: #AFD3E2;
-    color: #146C94;
-    padding: 20px 0;
-}
-.carousel-item img {
-    height: 500px;
+    }
+    /* color de la barra de navegación */
+    .navbar {
+        background-color: #19A7CE;
+    }
+    .navbar a {
+        color: white !important;
+        font-weight: bold;
+    }
+    /* color del boton */
+    .btn-primary {
+        background-color: #146C94;
+        border: none;
+    }
+    .btn-primary:hover {
+        background-color: #19A7CE;
+    }
+    /* color del footer */
+    footer {
+        background-color: #AFD3E2;
+        color: #146C94;
+        padding: 20px 0;
+    }
+    /* carousel */
+    .carousel-item img {
+        height: 500px;
+        object-fit: cover;
+    }
+    /* Efecto de voltear tarjeta */
+    .flip-card {
+    background-color: transparent;
+    perspective: 1000px;
+    width: 100%;
+    max-width: 300px;
+    height: 420px;
+    margin: auto;
+    }
+    .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+    }
+    .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+    }
+    .flip-card-front,
+    .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    border-radius: 8px;
+    overflow: hidden;
+    }
+    .flip-card-front img {
+    height: 200px;
     object-fit: cover;
-}
+    }
+    .flip-card-front {
+    background-color: #fff;
+    }
+    .flip-card-back {
+    background-color: #146C94;
+    color: white;
+    transform: rotateY(180deg);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    }
+
+    .card-title, .card-text {
+    color: #146C94;
+    }
